make important parameters yinst settable