@@ -26,7 +26,7 @@ export SHARK_MASTER_MEM=$(miners_shark__SHARK_MASTER_MEM)
 export SCALA_VERSION=2.9.3
 export SCALA_HOME=$(miners_shark__SCALA_HOME)
 
-export JAVA_HOME=/home/y/libexec64/jdk1.7.0/
+export JAVA_HOME=$(miners_shark__JAVA_HOME)
 
 # (Required) Point to the patched Hive binary distribution
 export HIVE_HOME=$(miners_shark__HIVE_HOME)
@@ -53,8 +53,17 @@ export SPARK_MASTER_PORT=$(miners_shark__SPARK_MASTER_PORT)
 export GC_OPTS="-verbose:gc -XX:-PrintGCDetails -XX:+PrintGCTimeStamps"
 export DEBUG_OPTS="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8787"
 
-SPARK_JAVA_OPTS="$DEBUG_OPTS -XX:-UseSplitVerifier -XX:ReservedCodeCacheSize=256m -XX:MaxPermSize=1g "
-SPARK_JAVA_OPTS+="-Dspark.local.dir=/tmp "
-SPARK_JAVA_OPTS+="-Dspark.kryoserializer.buffer.mb=10 "
-SPARK_JAVA_OPTS+="-verbose:gc -XX:-PrintGCDetails -XX:+PrintGCTimeStamps "
+SPARK_JAVA_OPTS="-XX:-UseSplitVerifier -XX:ReservedCodeCacheSize=256m -XX:MaxPermSize=1g "
+SPARK_JAVA_OPTS+=$(miners_shark__DEBUG_OPTS)
+SPARK_JAVA_OPTS+=" -Dspark.akka.frameSize=$(miners_shark__AKKA_FRAME_SIZE)"
+SPARK_JAVA_OPTS+=" -Dspark.serializer=$(miners_shark__SERIALIZER)"
+SPARK_JAVA_OPTS+=" -Dspark.storage.blockManagerHeartBeatMs=$(miners_shark__BLOCKMANAGER_HEARTBEAT)"
+SPARK_JAVA_OPTS+=" -Dspark.storage.memoryFraction=$(miners_shark__STORAGE_FRACTION)"
+SPARK_JAVA_OPTS+=" -Djava.library.path=$(miners_shark__LIBRARY_PATH)"
+SPARK_JAVA_OPTS+=" -Dspark.local.dir=$(miners_shark__LOCAL_DIR)"
+SPARK_JAVA_OPTS+=" -Dspark.kryoserializer.buffer.mb=$(miners_shark__KRYO_BUFFER_SIZE)"
+SPARK_JAVA_OPTS+=" "
+SPARK_JAVA_OPTS+=$(miners_shark__ADDITIONAL_CLASSPATH)
+SPARK_JAVA_OPTS+=" "
+SPARK_JAVA_OPTS+=$(miners_shark__GC_OPTS)
 export SPARK_JAVA_OPTS
